test/fail/api/string/string_to_i_with_junk.lly
#[
ValueError: Invalid base 10 literal '123abc'.
Traceback:
    from [C]: in string::to_i
    from string_to_i_with_junk.lly:8: in __main__
]#

"123abc".to_i()
